<resources>
    <string name="app_name">Weekend</string>
    <string name="tip_double_click_exit">再按一下就要退出app了</string>
    <string name="input_mobile">请输入手机号码</string>
    <string name="input_password">请输入登陆密码</string>
    <string name="login">登陆</string>
    <string name="regist">注册</string>
    <string name="forget_password_q">忘记密码?</string>
    <string name="message_login">短信登陆</string>
    <string name="wrong_mobile">手机号码输入有误</string>
    <string name="service_error_mit">服务器异常，请稍后再试</string>
    <string name="check_detail">查看详情></string>


    <string name="joined_act">我的订单</string>
    <string name="my_order">我的订单</string>
    <string name="confirm">确定</string>
    <string name="interest">兴趣</string>
    <string name="attention_act">我的关注</string>
    <string name="info_recommend_friend">分享有礼</string>
    <string name="info_coupons">优惠券</string>
    <string name="wallet">钱包</string>
    <string name="info_setup">设置</string>
    <string name="info_contact_service">联系客服</string>
    <string name="info_i_will_release">我要发布</string>
    <string name="info_like">喜欢的</string>
    <string name="i_attention_user">已关注的用户</string>
    <string name="attention_me_user">关注我的用户</string>
    <string name="search_hit_text">搜索活动发布人、活动名称、地点</string>
    <string name="info_quest">提问</string>
    <string name="info_answer_one">回答一个</string>
    <string name="info_is_over">已失效</string>
    <string name="info_share_to">分享到</string>
    <string name="info_wx_friend">微信好友</string>
    <string name="info_friend_zone">朋友圈</string>
    <string name="sina_Weibo">新浪微博</string>
    <string name="info_cancel">取消</string>
    <string name="friend_zone">朋友圈</string>
</resources>


